# azure-cleanroom

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .golangci.yml  DEV-ENVIRONMENT-SETUP-GUIDE.md  Directory.Build.props  Directory.Packages.props  README.md  TSG.md  go.mod  go.sum  pyproject.toml
src/code-launcher/: code_launcher.py  pyproject.toml  requirements.txt
src/code-launcher/src/: requirements.txt
src/code-launcher/src/cmd_executors/: executors.py
src/code-launcher/src/code_launcher/: main.py
src/code-launcher/src/code_launcher/cmd_executors/: executors.py
src/code-launcher/src/code_launcher/connectors/: httpconnectors.py
src/code-launcher/src/code_launcher/utilities/: podman_utilities.py  utilities.py
src/code-launcher/src/connectors/: httpconnectors.py
src/code-launcher/src/utilities/: podman_utilities.py  utilities.py
src/code-launcher/test/: test_code_launch.py  test_executors.py  test_httpconnectors.py
src/internal/cleanroom-internal/: pyproject.toml
src/internal/cleanroom-internal/src/cleanroom_internal/: __init__.py
src/internal/cleanroom-internal/src/cleanroom_internal/utilities/: __init__.py  mountpoint_utilities.py  otel_setup_utilities.py  otel_utilities.py  secret_utilities.py  tracing_utilities.py  utilities.py
src/internal/frontend-internal/: pyproject.toml
src/internal/frontend-internal/src/frontend_internal/: __init__.py  cleanroom_application_builder.py  i_cleanroom_application_builder.py
src/internal/frontend-internal/src/frontend_internal/models/: cleanroom_application.py  input_models.py
src/internal/frontend-internal/test/: test_blobfuse_subdirectory.py
src/s3fs-launcher/: pyproject.toml  requirements.txt  s3fs-launcher.py  utilities.py
src/s3fs-launcher/src/s3fs_launcher/: main.py  utilities.py
src/sdk/: README.md  generate_models.ps1  pyproject.toml
src/sdk/cleanroom-governance-client-lib/auto-generated/csharp/models/: AccessTokenResponse.cs  AddUserIdentityRequest.cs  AttestedEventRequest.cs  AttestedRequest.cs  CertificateAuthorityGenerateEndorsedCertRequest.cs  CertificateAuthorityGenerateSigningKeyRequest.cs  CertificateAuthorityGetInfoRequest.cs  CheckUpdateResponse.cs  CleanRoomPolicyGetCleanRoomPolicyRequest.cs  CleanRoomPolicyGetDelegatePolicyRequest.cs  CleanRoomPolicyListDelegatePoliciesRequest.cs  CleanRoomPolicyProposeCleanRoomPolicyChangeRequest.cs  CleanRoomPolicySetDelegatePolicyWithAttestationRequest.cs  ConsentCheckResponse.cs  ContractProposal.cs  ContractProposalsGetDeploymentProposalRequest.cs  ContractProposalsProposeDeploymentRequest.cs  ContractRuntimeOptionsCheckExecutionConsentRequest.cs  ContractRuntimeOptionsCheckExecutionStatusRequest.cs  ContractRuntimeOptionsCheckLoggingConsentRequest.cs  ContractRuntimeOptionsCheckLoggingStatusRequest.cs  ContractRuntimeOptionsCheckTelemetryConsentRequest.cs  ContractRuntimeOptionsCheckTelemetryStatusRequest.cs  ContractRuntimeOptionsDisableExecutionRequest.cs  ContractRuntimeOptionsEnableExecutionRequest.cs  ContractRuntimeOptionsProposeDisableLoggingRequest.cs  ContractRuntimeOptionsProposeDisableTelemetryRequest.cs  ContractRuntimeOptionsProposeEnableLoggingRequest.cs  ContractRuntimeOptionsProposeEnableTelemetryRequest.cs  ContractsGetContractRequest.cs  ContractsListContractsRequest.cs  ContractsListResponse.cs  ContractsProposeContractChangeRequest.cs  ContractsUpdateContractRequest.cs  ContractsVoteAcceptContractRequest.cs  ContractsVoteOnContractRequest.cs  ContractsVoteRejectContractRequest.cs  CreateProposalRequest.cs  CustomBallot.cs  DeploymentProposalResponse.cs  (+190 more)
src/sdk/cleanroom-governance-client-lib/auto-generated/csharp/operations/: ICertificateAuthority.cs  ICleanRoomPolicy.cs  IContractProposals.cs  IContractRuntimeOptions.cs  IContracts.cs  IEvents.cs  IGovernanceClient.cs  IMemberDocuments.cs  IMembers.cs  INetwork.cs  INode.cs  IOAuth.cs  IOidc.cs  IProposals.cs  IRuntimeOptions.cs  ISecrets.cs  IUpdates.cs  IUserDocuments.cs  IUserIdentities.cs  IUserInvitations.cs  IUserProposals.cs  IUsers.cs  IWorkspace.cs
src/sdk/cleanroom-governance-client-proxy/client/auto-generated/python/: MANIFEST.in  README.md  pyproject.toml
src/sdk/cleanroom-governance-client-proxy/service/auto-generated/csharp/controllers/: CertificateAuthorityAttestationController.cs  CertificateAuthorityController.cs  CleanRoomPolicyController.cs  CleanRoomPolicyDelegatesAttestationController.cs  (+24 more)
src/sdk/openapi/: README.md  cleanroom.yaml  dataset.yaml  query.yaml  spark.yaml
src/sdk/openapi/V2026_03_01_Preview/: frontend.yaml
src/sdk/src/cleanroom_sdk/models/: __init__.py  cleanroom.py  dataset.py  query.py  spark.py
src/workloads/analytics/analytics-app/: pyproject.toml
src/workloads/analytics/analytics-app/src/analytics_workload/: run_query.py  spark_launcher.py
src/workloads/analytics/cleanroom-spark-frontend/: README.md  frontend-ai-optimization.md  pyproject.toml
src/workloads/analytics/cleanroom-spark-frontend/helm/chart/: values.yaml
src/workloads/analytics/cleanroom-spark-frontend/src/cleanroom_spark_frontend/: main.py
src/workloads/inferencing/kserve-inferencing-frontend/: pyproject.toml
src/workloads/inferencing/kserve-inferencing-frontend/helm/chart/: Chart.yaml  values.yaml
src/workloads/inferencing/kserve-inferencing-frontend/src/kserve_inferencing_frontend/: main.py
test/onebox/multi-party-collab/big-data-query-analytics/: build-dataset-spec.py  convert_data.py  create-bucket.ps1  create-kek.py  delete-bucket.ps1  deploy-s3ninja.ps1  download-bucket.ps1  dump-cleanroom-cluster-logs.ps1  generate-wrapped-dek.py  get-input-data.ps1  get-telemetry.ps1  longhaul-test.py  pyproject.toml  run-collab-aci.ps1  run-collab.ps1  run-scenario-generate-template-policy.ps1  run-scenario.ps1  submit-sql-job.ps1  submit-sql-job.py  test-analytics.ps1  test-big-data-analytics.ps1  test-big-data-analytics.py  test-longhaul.ps1  upload-bucket.ps1  wait-for-spark-driver-pod-termination.ps1
test/onebox/multi-party-collab/big-data-query-analytics/consumer/query/: malicious_query.txt  segment1.txt  segment2.txt  segment3.txt
(+1614 files in other folders)
