[project]
name = "s3fs-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.4",
    "ruamel-yaml==0.18.6",
    "cleanroom-internal"
]

[project.scripts]
s3fs_launcher = "s3fs_launcher.main:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"