[project]
name = "frontend-internal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hprabh", email = "hprabh@microsoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cleanroom-sdk",
    "pydantic==2.11.7"
]

[project.scripts]
frontend-internal = "frontend_internal:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
