[project]
name = "analytics-workload"
version = "0.1.0"
description = "Analytics workload for cleanroom Spark applications"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pyspark==4.0.0",
    "requests==2.32.4",
    "dependency-injector==4.48.3",
    "tenacity==9.0.0",
    "cleanroom-internal",
    "cleanroom-sdk",
    "analytics-contracts"
]

[project.scripts]
spark_launcher = "analytics_workload.spark_launcher:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"